[package]
name = "win_dialog"
version = "0.5.3"
edition = "2021"
authors = ["Brian Heise <bnheise@gmail.com"]
description = "An idiomatic wrapper around windows MessageBox function for providing message dialogs in Windows."
repository = "https://github.com/toadslop/win-dialog"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
thiserror = "1.0.61"
windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging"] }

[features]
deprecated = []
